--- a/shares_style.css
+++ b/shares_style.css
@@ -1,8 +1,8 @@
-/*
+
 body {
-    background-color: #ffffff;
+    background-color: #c1e1a6;
 }
-*/
+
 div.no-script-warning {
     font-weight: bold;
     background: #cc0000;
@@ -14,17 +14,3 @@ div.no-script-info {
     background: #66ccff;
     text-align: center;
 }
-/*
-span.visible{color: #000000;}
-span.taken {background-color: #e60000;}
-span.free {background-color: #090;}
-span.selected {background-color: #ffff00;}
-span.booked {background-color: #ff9900;}
-span.canceled {background-color: #00b300;}
-
-span.lrg{
-    height:100%;
-    width:100%;
-    display:inline-block;
-}
-*/
